# croissant

./: .env.example  .gitignore  BROWSER_DATABASE_COMPLETE.md  BROWSER_PERSISTENCE.md  Cargo.toml  Croissant-x86_64.AppImage  ENVIRONMENT_SETUP.md  FRONTEND_IMPROVEMENTS.md  TODO  TROUBLESHOOTING_BLANK_SCREEN.md  create_dev_tables.sh  create_dev_tables_safe.sh  deb2appimage.sh  main.py  main_safe.py  out.txt  outa.txt  output.txt  package-lock.json  package.json  requirements.txt  server.js  start-dev.sh  tauri.conf.json  tsconfig.json
assets/: icon.icns
public/: index.html
src/: App.css  App.js  index.css  main.rs  main_safe.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
