[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8", "with-serde_json-1"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.2", features = [] }
tauri-plugin-log = "2.5.0"
bcrypt = "0.14"
dotenv = "0.15"

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }
